# V2I-Hub

./: 2016-10-24 Release-Notes.txt  2016-11-20 Readme.txt  2016-11-28 Readme.txt  2016-11-28 V2I Hub Application Description.docx  2017-01-25 Readme.txt  2017-02-28 V2I Hub Application Description.docx  2017-07-12 Readme.txt  2017-07-12 Release-Notes.txt  2017-07-12 V2I Hub Application Description.docx  2017-12-14 Readme.txt  2017-12-14 Release-Notes.txt  2018-07-03 Release-Notes.txt  Application Description_IV2IP_v1.docx  Application Tracking Worksheet_IVP.xlsx  IVP - Application Description.docx  IVP - OSADP Application Metadata Collection Form v3.docx  License.txt  Readme.txt  Release-Notes.txt  V2I Hub Application Description.docx  V2I Hub Application Tracking Worksheet.xlsx  V2I Hub OSADP Application Metadata Collection Form v3.1.docx  tmxcore.conf  ~$17-02-28 V2I Hub Application Description.docx  ~$I Hub Application Description.docx  ~$P - Application Description.docx
TMX/: CMakeLists.txt  PluginDependency.cmake  web_portal_setup.sh
TMX/Asn_J2735/: CMakeLists.txt  Makefile  cmake_install.cmake
TMX/Common/ExtractMessageTypes/: .cproject  .project  CMakeLists.txt
TMX/Common/ExtractMessageTypes/CVIS.Core_Messages/: ApplicationDataMessage.cs  ApplicationMessage.cs  EpcwDiagnosticMessage.cs  LocationMessage.cs  MessageTypes.cs  TmxEventLogMessage.cs  VehicleStateMessage.cs
TMX/Common/ExtractMessageTypes/src/: ExtractMessageTypeTemplate.cpp  Main.cpp  SelfRegistry.hpp  version.h
TMX/Common/TmxMessages/: .cproject
TMX/Common/TmxMessages/include/: ApplicationDataMessage.h  ApplicationDataMessageTypes.h  ApplicationMessage.h  ApplicationMessageTypes.h  DecodedBsmMessage.h  EventLogMessage.h  LocationMessage.h  PedestrianLogMessage.h  PedestrianMessage.h  RemoteVehicleMessage.h  VehicleBasicMessage.h  VehicleParameterTypes.h  VehicleStateChange.h  version.h
TMX/Core/Asn_J2735/: .cproject  CMakeLists.txt  J2735_R41_Source_mod.ASN
TMX/Core/TmxApi/: .cproject  .project  CMakeLists.txt  treerepair.xml
TMX/Core/TmxApi/tmx/: IvpMessage.c  IvpPlugin.c  mx.h
TMX/Core/TmxCore/: .cproject  .project  CMakeLists.txt  tmxcore.conf  websockify.conf
TMX/Core/TmxCore/src/: Plugin.cpp  PluginConnection.cpp
TMX/Core/TmxUtils/: .cproject  .project  CMakeLists.txt
TMX/Core/TmxUtils/src/: BsmConverter.cpp  BsmConverter.h  FrequencyThrottle.h  Intersection.cpp  Intersection.h  IntersectionList.cpp  MapSupport.cpp  MapSupport.h  PluginClient.cpp  PluginClient.h  PluginLog.h  UdpClient.h  UdpServer.h  WGS84Point.h
TMX/Core/TmxUtils/test/: IntersectionListTest.cpp
TMX/Core/TmxWebPortal/: dbconnection.php  footer.php  header.php  localhost.sql  php.ini  setsessionvariable.php  style.css
TMX/Core/TmxWebPortal/UI/: powerdown.php
TMX/Core/TmxWebPortal/admin/: pluginConfigurationParameters.php  plugins.php  updatePlugin.php
TMX/Core/TmxWebPortal/api/: ConfigurationParameterActions.php  EventLogActions.php  InstalledPluginActions.php  MessageActivityActions.php  PluginStatusActions.php  StatusValuesActions.php
TMX/Core/TmxWebPortal/classes/: ProcessPluginZip.php
TMX/Core/TmxWebPortal/status/: pluginStatus.php  systemStatus.php
TMX/Core/TmxWebPortal/users/: changeAccessLevel.php  changePassword.php
TMX/Database/: install_db.sh  install_db.sh~
TMX/Plugins/AradaReceiverPlugin/: .cproject  .project  CMakeLists.txt  manifest.json
TMX/Plugins/AradaReceiverPlugin/src/: WaveRadio.c  (+2 more)
TMX/Plugins/CswPlugin/: .cproject  .project  CMakeLists.txt  IVP_TF_CSW.xml  buildPlugin.sh  manifest.json
TMX/Plugins/DmsPlugin/: .cproject  .project  CMakeLists.txt  buildPlugin.sh  manifest.json
TMX/Plugins/DsrcImmediateForwardPlugin/: .cproject  .project  CMakeLists.txt  buildPlugin.sh  manifest.json
TMX/Plugins/LocationPlugin/: .cproject  .project  CMakeLists.txt  buildPlugin.sh  description.txt  manifest.json
TMX/Plugins/MapPlugin/: .cproject  .project  CMakeLists.txt  GID_Telegraph-Twelve_Mile_withEgress.xml  description.txt  manifest.json
TMX/Plugins/RtcmPlugin/: .cproject  CMakeLists.txt  buildPlugin.sh  manifest.json
TMX/Plugins/SpatPlugin/: .cproject  CMakeLists.txt  buildPlugin.sh  manifest.json  twelve_mile-telegraph-PTLMMapping.xml
TMX/Plugins/UtcPlugin/: .cproject  .project  CMakeLists.txt  buildPlugin.sh  manifest.json
TMX/TmxApi/: CMakeLists.txt  Makefile  cmake_install.cmake
TMX/TmxApi/tmx/: version.h
TMX/TmxCore/: CMakeLists.txt  Makefile  cmake_install.cmake
TMX/TmxCore/src/: MessageProfiler.cpp  version.h
TMX/TmxMessages/include/: ApplicationMessageEnumTypes.h  LocationMessage.h  MessageTypes.h
TMX/TmxUtils/: CMakeLists.txt  Makefile  cmake_install.cmake
TMX/TmxUtils/src/: Clock.cpp  Clock.h  Conversions.cpp  Conversions.h  GeoVector.cpp  GeoVector.h  Intersection.cpp  Intersection.h  MapSupport.cpp  MapSupport.h  PluginClient.cpp  PluginClient.h  PluginDataMonitor.h  PluginExec.cpp  PluginExec.h  PluginExtender.h  PluginLog.cpp  PluginLog.h  System.cpp  ThreadGroup.h  ThreadTimer.cpp  ThreadTimer.h  WGS84Point.h  version.h
TMX/TmxWebPortal/: CMakeLists.txt  dbconnectionPDO.php  footer.php  header.php  index.php  updatePhp.sh
TMX/TmxWebPortal/admin/: addPlugin.php  pluginConfigurationParameters.php  plugins.php  system.php  uploadPlugin.php
TMX/TmxWebPortal/api/: Authentication.php  ConfigurationParameterActions.php  EventLogActions.php  InstalledPluginActions.php  MessageActivityActions.php  MessageLatencyActions.php  PluginStatusActions.php  StatusValuesActions.php  SystemConfigActions.php  apikey.txt
TMX/TmxWebPortal/classes/: LoginFormKey.class.php
TMX/TmxWebPortal/conf/: websockify.conf
TMX/TmxWebPortal/debian/: postinst  prerm
TMX/TmxWebPortal/js/: MessageTypes.js
TMX/TmxWebPortal/status/: eventLog.php  messageActivity.php  messageLatency.php  pluginStatus.php
TMX/TmxWebPortal/users/: createUser.php  editUser.php  removeUser.php  resetPassword.php  users.php
src/v2i-hub/CommandPlugin/: .cproject  .project  CMakeLists.txt  manifest.json
src/v2i-hub/LearInterfacePlugin/: .cproject  .project  CMakeLists.txt  manifest.json
(+666 files in other folders)
