# TMX CMakeFile v. 2.3.1

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_SOURCE_DIR}")

PROJECT(TMX C CXX)

SET(CMAKE_C_FLAGS "  -O0 -Wall -fmessage-length=0  -DTMX_DEBUG")
SET(CMAKE_CXX_FLAGS "-std=c++0x -O0 -Wall -fmessage-length=0  -DTMX_DEBUG")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
INCLUDE_DIRECTORIES(Asn_J2735/include Asn_J2735/include/asn_j2735_r41 TmxApi TmxApi/tmx TmxCore/src TmxUtils/src TmxMessages/include)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)

SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

# Boost 1.55 is a requirement
ADD_DEFINITIONS (-DMX_NO_BT -DBOOST_ALL_DYN_LINK)
SET (Boost_USE_STATIC_RUNTIME OFF)

FIND_PACKAGE(Boost 1.55 COMPONENTS system thread atomic chrono regex log log_setup filesystem program_options ${XTRA_BOOST_LIBRARIES} REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

# MySQL client libraries are a requirement
IF (MYSQL_INCLUDE_DIR)
  # Already in cache, be silent
  SET(MYSQL_FIND_QUIETLY TRUE)
ENDIF (MYSQL_INCLUDE_DIR)

FIND_PATH(MYSQL_INCLUDE_DIR mysql.h
  /usr/local/include/mysql
  /usr/include/mysql
)

FIND_PATH(MYSQLCPPCONN_INCLUDE_DIR cppconn/driver.h 
  /usr/local/include
  /usr/include
)

SET(MYSQL_NAMES mysqlclient mysqlclient_r)
FIND_LIBRARY(MYSQL_LIBRARY
  NAMES ${MYSQL_NAMES}
  PATHS /usr/lib /usr/local/lib
  PATH_SUFFIXES mysql
)

IF (MYSQL_INCLUDE_DIR AND MYSQLCPPCONN_INCLUDE_DIR AND MYSQL_LIBRARY)
  SET(MYSQL_FOUND TRUE)
  SET( MYSQL_LIBRARIES ${MYSQL_LIBRARY} )
  INCLUDE_DIRECTORIES(${MYSQL_INCLUDE_DIR})
  INCLUDE_DIRECTORIES(${MYSQLCPPCONN_INCLUDE_DIR})
ELSE ()
  SET(MYSQL_FOUND FALSE)
  SET( MYSQL_LIBRARIES )
ENDIF ()

IF (MYSQL_FOUND)
  IF (NOT MYSQL_FIND_QUIETLY)
    MESSAGE(STATUS "Found MySQL: ${MYSQL_LIBRARY}")
  ENDIF (NOT MYSQL_FIND_QUIETLY)
ELSE (MYSQL_FOUND)
  IF (MYSQL_FIND_REQUIRED)
    MESSAGE(STATUS "Looked for MySQL libraries named ${MYSQL_NAMES}.")
    MESSAGE(FATAL_ERROR "Could NOT find MySQL library")
  ENDIF (MYSQL_FIND_REQUIRED)
ENDIF (MYSQL_FOUND)

GET_FILENAME_COMPONENT(MYSQL_LIBRARY_DIR ${MYSQL_LIBRARY} DIRECTORY)
FIND_LIBRARY( MYSQLCPPCONN_LIBRARY NAMES mysqlcppconn HINTS ${MYSQL_LIBRARY_DIR} )

FIND_PATH( JSONCPP_INCLUDE_DIR json/json.h HINTS /usr/include/jsoncpp /usr/local/include/jsoncpp )
FIND_LIBRARY( JSONCPP_LIBRARY NAMES jsoncpp PATHS /usr/lib /usr/local/lib)
INCLUDE_DIRECTORIES(${JSONCPP_INCLUDE_DIR})

MARK_AS_ADVANCED(
  MYSQL_LIBRARY
  MYSQL_INCLUDE_DIR
  MYSQLCPPCONN_INCLUDE_DIR
  JSONCPP_INCLUDE_DIR
  )

ADD_SUBDIRECTORY(Asn_J2735)
ADD_SUBDIRECTORY(TmxApi)
ADD_SUBDIRECTORY(TmxCore)
ADD_SUBDIRECTORY(TmxUtils)

FILE(GLOB ALL_PLUGINS "Plugins/*/CMakeLists.txt")
FOREACH(PLUGIN ${ALL_PLUGINS})
    GET_FILENAME_COMPONENT(PLUGINDIR ${PLUGIN} DIRECTORY)
    ADD_SUBDIRECTORY(${PLUGINDIR})
ENDFOREACH()


