# TMX Plugin Utils CMakeFile v. 2.2

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

PROJECT(tmxutils CXX)

FILE(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

SET(DEPENDS tmxapi asn_j2735_r41)
SET(LIB_TYPE STATIC)
SET(PKG_HEADERS ON)

if (NOT LIB_TYPE)
	ADD_EXECUTABLE( ${PROJECT_NAME} ${SOURCES} )
	INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
else ()
	ADD_LIBRARY( ${PROJECT_NAME} ${LIB_TYPE} ${SOURCES} )
	INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
endif ()

TARGET_LINK_LIBRARIES( ${PROJECT_NAME} tmxapi;asn_j2735_r41;${MYSQL_LIBRARIES};${MYSQLCPPCONN_LIBRARY} )

if (DEPENDS)
	ADD_DEPENDENCIES( ${PROJECT_NAME} tmxapi asn_j2735_r41 )
endif()

if (PKG_HEADERS)
	INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR} DESTINATION include FILES_MATCHING PATTERN "*.h")
endif()
