PROJECT ( CommandPlugin VERSION 3.0.0 LANGUAGES CXX )

FIND_PACKAGE (OpenSSL REQUIRED)

FIND_PATH (WEBSOCKETS_INCLUDE_DIR libwebsockets.h PATH_SUFFIXES websockets)

FIND_LIBRARY (WEBSOCKETS_LIBRARY websockets)
FIND_LIBRARY (EV_LIBRARY ev)
FIND_LIBRARY (UV_LIBRARY uv)

BuildTmxPlugin ( )

TARGET_INCLUDE_DIRECTORIES (${PROJECT_NAME} PUBLIC ${WEBSOCKETS_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} tmxctlStatic tmxutils 
					   ${WEBSOCKETS_LIBRARY} ${OPENSSL_LIBRARIES} ${EV_LIBRARY} ${UV_LIBRARY})

# Do not try to send my own log messages to myself,
# but strictly log them to a file
TARGET_COMPILE_OPTIONS (${PROJECT_NAME} PRIVATE -DNO_EVENTLOG_UDP)