PROJECT ( LearInterfacePlugin VERSION 3.0.0 LANGUAGES C CXX )

SET (TMX_PLUGIN_NAME "LearInterface")

SET (CMAKE_EXE_LINKER_FLAGS -Wl,--allow-shlib-undefined)

FIND_PACKAGE (LearSDK REQUIRED)

BuildTmxPlugin ()

TARGET_INCLUDE_DIRECTORIES ( ${PROJECT_NAME} PUBLIC ${LEARSDK_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES ( ${PROJECT_NAME} tmxutils ${LEARSDK_LIBRARIES})

